--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
+    <link rel="icon" href="./images/favicon.ico">
+    <link rel="icon" href="./images/favicon.svg">
     <script src="./scripts/script.js"></script>
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <p class="header-bg-decor" aria-hidden="true">rec</p>
+      <span class="header-bg-decor" aria-hidden="true">rec</span>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -51,12 +53,12 @@
     </header>
     <main class="main">
       <section class="problema section">
-        <h3 class="section-topic title-decor">
+        <h2 class="section-topic title-decor">
           Почему сосредоточиться так сложно
-        </h3>
-        <article class="card-list">
-          <div class="card">
-            <h4 class="title-decor">Многозадачность</h4>
+        </h2>
+        <div class="card-list">
+          <article class="card">
+            <h3 class="title-decor">Многозадачность</h3>
             <p class="text-card">
               Особенно сложно сосредоточиться, когда задач много и все они —
               важные. Где же легендарная многозадачность, когда она так нужна
@@ -68,9 +70,9 @@
               выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
               работаем невнимательно: ошибаемся и быстро устаём.
             </p>
-          </div>
-          <div class="card">
-            <h4 class="title-decor">Дофамин</h4>
+          </article>
+          <article class="card">
+            <h3 class="title-decor">Дофамин</h3>
             <p class="text-card">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В
               нашей невозможности сосредоточиться замешана и полная
@@ -81,16 +83,16 @@
               чувствуем удовольствие. Получается замкнутый круг: чем больше
               отвлекаешься, тем больше удовольствия получаешь.
             </p>
-          </div>
-        </article>
+          </article>
+        </div>
       </section>
       <section class="reasons section">
-        <h3 class="section-topic title-decor">
+        <h2 class="section-topic title-decor">
           Что снижает концентрацию внимания?
-        </h3>
-        <article class="reasons-list card-list">
-          <div class="card">
-            <h4 class="title-decor">Многозадачность</h4>
+        </h2>
+        <div class="reasons-list card-list">
+          <article class="card">
+            <h3 class="title-decor">Многозадачность</h3>
             <p class="text-card">
               Как концентрация может снижаться из-за… концентрации? Любая
               стрессовая ситуация (и резко меняющийся мир в целом) заставляет
@@ -99,8 +101,8 @@
               собранными всё время — невозможно. Концентрация — мышца, и она
               может не выдержать, если не давать ей отдохнуть.
             </p>
-          </div>
-          <div class="card">
+          </article>
+          <article class="card">
             <h3 class="title-decor">Еда</h3>
             <p class="text-card">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
@@ -110,9 +112,9 @@
               углеводов» заканчивается, мы чувствуем усталость и сонливость. И
               хотим ещё больше быстрых углеводов.
             </p>
-          </div>
-          <div class="card">
-            <h4 class="title-decor">Гаджеты</h4>
+          </article>
+          <article class="card">
+            <h3 class="title-decor">Гаджеты</h3>
             <p class="text-card">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
               наушниках — подкаст, а на компьютере фоном — ещё и видео с
@@ -122,19 +124,19 @@
               Вот и получается, что чем больше времени мы проводим в гаджетах,
               тем больше времени затем нужно, чтобы вернуться к работе.
             </p>
-          </div>
-        </article>
+          </article>
+        </div>
       </section>
       <section class="solution section">
-        <h3 class="section-topic title-decor">
+        <h2 class="section-topic title-decor">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
-        </h3>
-        <article class="card-list">
+        </h2>
+        <div class="card-list">
           <h3 class="title-decor">
             5 простых (на самом деле не очень) советов
           </h3>
-          <div class="card">
+          <article class="card">
             <h4 class="topic-card title-decor">Представьте небо и облака</h4>
             <p class="text-card">
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
@@ -146,18 +148,18 @@
               вернуться в настоящий момент, а не волноваться о потенциальных
               проблемах из будущего.
             </p>
-          </div>
-          <div class="card">
-            <h5 class="topic-card title-decor">Включите музыку</h5>
+          </article>
+          <article class="card">
+            <h4 class="topic-card title-decor">Включите музыку</h4>
             <p class="text-card">
               Но не любую, и не любимую. Любимая может быть связана с сильными
               положительными эмоциями, которые тоже очень сильно отвлекают.
               Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
               попробовать включить плейлист с «белым шумом» или нейромузыкой.
             </p>
-          </div>
-          <div class="card">
-            <h5 class="topic-card title-decor">Прогуляйтесь</h5>
+          </article>
+          <article class="card">
+            <h4 class="topic-card title-decor">Прогуляйтесь</h4>
             <p class="text-card">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
               <a class="link" href="#">показал</a>, что созерцание природы
@@ -167,30 +169,30 @@
               больше кислорода и он будет лучше работать. Но и простая
               двадцатиминутная прогулка — тоже отличный вариант.
             </p>
-          </div>
-          <div class="card">
-            <h5 class="topic-card title-decor">Хорошо ешьте</h5>
+          </article>
+          <article class="card">
+            <h4 class="topic-card title-decor">Хорошо ешьте</h4>
             <p class="text-card">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
               которые препятствуют резким скачкам сахара в крови. Например, с
               высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
               чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
             </p>
-          </div>
-          <div class="card">
-            <h5 class="topic-card title-decor">Читайте</h5>
+          </article>
+          <article class="card">
+            <h4 class="topic-card title-decor">Читайте</h4>
             <p class="text-card">
               Настоящие бумажные книги. Это правда помогает с концентрацией:
               чтобы прочитать пост в соцсети, достаточно нескольких минут или
               даже секунд. А вот интересная книга способна затянуть и на
               несколько часов и круто тренирует направленное внимание.
             </p>
-          </div>
-        </article>
+          </article>
+        </div>
       </section>
       <section class="card">
-        <h4 class="title-decor">А можно в картинках?</h4>
-        <article class="gallery">
+        <h3 class="title-decor">А можно в картинках?</h3>
+        <div class="gallery">
           <figure class="gallery__item">
             <img
               src="./images/sunset.png"
@@ -231,7 +233,7 @@
               loading="lazy"
             />
           </figure>
-        </article>
+        </div>
       </section>
     </main>
     <footer class="footer decorated-zone">
